# prog-arg-manager

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
doc/diagram/: ArgsHandling-ActivityDiagram.puml
include/: ProgArgManager.h
src/: CMakeLists.txt  ProgArgManager.cpp
test/component_test/: CMakeLists.txt  main.cpp
test/unit_test/: CMakeLists.txt  ProgArgManagerTest.cpp
